fix align text

--- a/static/css/main-ve.css
+++ b/static/css/main-ve.css
@@ -23,7 +23,6 @@
 /*Footer*/
 
 .logos-footer {
-	text-align: center;
 	border-top: 1px solid #48515F;
 	margin-top: 20px;
 	padding-top: 30px;
